network_policies/istio-bookinfo/calico-allow-all.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: calico-allow-all
  namespace: bookinfo-services-ns
spec:
  selector: all()
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
  egress:
  - action: Allow
