network_policies/istio-bookinfo/calico-clusterwide-cross-namespace.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: calico-clusterwide-cross-namespace
spec:
  selector: app == 'reviews'
  types:
  - Ingress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: app == 'productpage'
    destination:
      ports:
      - 9080
