network_policies/istio-bookinfo/calico-deny-all.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: calico-deny-all
  namespace: bookinfo-data-ns
spec:
  selector: all()
  types:
  - Ingress
  - Egress
  ingress: []
  egress: []
