network_policies/istio-bookinfo/calico-egress-deny.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: calico-egress-deny
  namespace: bookinfo-frontend-ns
spec:
  selector: app == 'productpage'
  types:
  - Egress
  egress:
  - action: Allow
    protocol: TCP
    destination:
      namespaceSelector: kubernetes.io/metadata.name == 'bookinfo-services-ns'
      selector: app == 'reviews'
      ports:
      - 9080
  - action: Deny
    protocol: TCP
    destination:
      namespaceSelector: kubernetes.io/metadata.name == 'bookinfo-data-ns'
      selector: app == 'ratings'
      ports:
      - 9080
