network_policies/istio-bookinfo/calico-ingress-deny-vs-allow.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: calico-ingress-deny-vs-allow
  namespace: bookinfo-data-ns
spec:
  selector: app == 'ratings'
  types:
  - Ingress
  ingress:
  - action: Allow
    source:
      namespaceSelector: kubernetes.io/metadata.name == 'bookinfo-frontend-ns'
      selector: app == 'productpage'
  - action: Deny
    protocol: TCP
    source:
      namespaceSelector: kubernetes.io/metadata.name == 'bookinfo-frontend-ns'
      selector: app == 'productpage'
    destination:
      ports:
      - 9080
