network_policies/istio-bookinfo/calico-pod-selector-egress-ingress.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: calico-pod-selector-egress-ingress
  namespace: bookinfo-services-ns
spec:
  selector: app == 'reviews'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    source:
      namespaceSelector: kubernetes.io/metadata.name == 'bookinfo-frontend-ns'
      selector: app == 'productpage'
  egress:
  - action: Allow
    destination:
      selector: app == 'details'
