network_policies/istio-bookinfo/cilium-deny-all.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cilium-deny-all
  namespace: bookinfo-services-ns
spec:
  endpointSelector: {}
