network_policies/istio-bookinfo/cilium-egress-deny-vs-allow.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cilium-egress-deny-vs-allow
  namespace: bookinfo-frontend-ns
spec:
  endpointSelector:
    matchLabels:
      app: productpage
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: bookinfo-data-ns
        app: ratings
  egressDeny:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: bookinfo-data-ns
        app: ratings
    toPorts:
    - ports:
      - port: "9080"
        protocol: TCP
