network_policies/istio-bookinfo/cilium-ingress-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cilium-ingress-deny
  namespace: bookinfo-data-ns
spec:
  endpointSelector:
    matchLabels:
      app: ratings
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: bookinfo-services-ns
        app: reviews
    toPorts:
    - ports:
      - port: "9080"
        protocol: TCP
  ingressDeny:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: bookinfo-frontend-ns
        app: productpage
    toPorts:
    - ports:
      - port: "9080"
        protocol: TCP
