network_policies/istio-bookinfo/namespace-selector-ingress-without-ports.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-selector-ingress-without-ports
  namespace: bookinfo-services-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: bookinfo-frontend-ns
