network_policies/istio-bookinfo/pod-selector-egress-label-mismatch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-selector-egress-label-mismatch
  namespace: bookinfo-services-ns
spec:
  podSelector:
    matchLabels:
      app: reviews
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: non-existent-service
