network_policies/istio-bookinfo/pod-selector-egress-port-mismatch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-selector-egress-port-mismatch
  namespace: bookinfo-services-ns
spec:
  podSelector:
    matchLabels:
      app: reviews
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: ratings
    ports:
    - protocol: TCP
      port: 5555 # Port mismatch: ratings does not use port 5555
