network_policies/istio-bookinfo/pod-selector-ingress-port-mismatch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-selector-ingress-port-mismatch
  namespace: bookinfo-services-ns
spec:
  podSelector:
    matchLabels:
      app: details
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: reviews
    ports:
    - protocol: TCP
      port: 8080 # Port mismatch: details pod runs on port 9080
