network_policies/istio-bookinfo/pod-selector-ingress-with-port-range.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-selector-ingress-with-port-range
  namespace: bookinfo-services-ns
spec:
  podSelector:
    matchLabels:
      app: details
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: reviews
    ports:
    - protocol: TCP
      port: 9080
      endPort: 9090
