network_policies/istio-bookinfo/pod-selector-ingress-without-ports.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-selector-ingress-without-ports
  namespace: bookinfo-services-ns
spec:
  podSelector:
    matchLabels:
      app: details
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: productpage
